2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (print_header, send_response,
	send_http_authenticate_header, request_handler): Improve documentation.
	(request_handler): Use "const" where possible. Introduce
	oap_cgi_base. Improve redirect for non-base URLs. Redirect
	"/login/". Fix memleak.
	(gsad_init): Improve documentation. Call init_validator. 

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c: Fixed some comments. Added list of includes.
	(DEFAULT_GSAD_PORT, DEFAULT_OPENVAS_ADMINISTRATOR_PORT,
	DEFAULT_OPENVAS_MANAGER_PORT, GCRY_THREAD_OPTION_PTHREAD_IMPL,
	gsad_daemon, validator, init_validator): New.
	(main): Use unified exit code. Improved comments.

2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_oap.h: Fixed comment.

	* src/CMakeLists.txt: Reformatted.

2009-12-02  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/omp.xsl: Make 'Full and fast' accessible again as a scan
	config template.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION, CMakeLists.txt, src/html/src/about.htm4: Version set
	to 0.8.2.SVN.

2009-12-01  Michael Wiegand <michael.wiegand@intevation.de>

	Add support for new empty scan config template.

	* src/html/src/omp.xsl: Switch default to 'empty'.

	* src/gsad_omp.c (create_config_omp): Switch default to 'empty'.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/omp.xsl: Grey out Stop/Delete in case a Task is "Requested".

2009-11-27  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.h, src/gsad_omp.c: New files.

	* src/CMakeLists.txt: Add static analysis rules.

2009-11-27  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-config-nvt-table): Always show the
	preferences, as there is always the timeout preference.

2009-11-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
