@@ -1,5 +1,10 @@
 2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* src/gsad.c (gsad_connection_info, get_header_credentials,
+	is_http_authenticated, file_reader, get_file_size): New.
+
+2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* src/gsad.c (print_header, send_response,
 	send_http_authenticate_header, request_handler): Improve documentation.
 	(request_handler): Use "const" where possible. Introduce
